# leap_stereo

./: AVI.ipynb  CMakeLists.txt  CMakeLists.txt~  README  leap_artur.ipynb  leap_wyciaganie_obrazu.ipynb  leap_wysylanie_obrazu.py  leap_wysylanie_obrazu.py~  package.xml
src/: AVI.cpp  dane_kalibracyjne.cpp  dane_kalibracyjne.cpp~
